# Qt-in-VSCode

./: CMakeLists.txt  README.md  meson.build
.devcontainer/: Dockerfile  devcontainer.json
cmake/: aarch64.cmake
meson/: aarch64.txt
resources/: resources.qrc
ui/: mainwindow.ui
